force-app/main/default/objects/AccountHistory__c/AccountHistory__c.object-meta.xml
<CustomObject>
    <description>Armazena as mudanças sofridas nos campos do objeto Conta</description>
    <label>Histórico de Conta</label>
    <nameField>
        <displayFormat>HC-{000000}</displayFormat>
        <label>Histórico de Conta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Históricos de Conta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>