force-app/main/default/objects/AccountHistory__c/fields/CampoAlterado__c.field-meta.xml
<CustomField>
    <fullName>CampoAlterado__c</fullName>
    <description>Campo do objeto Conta que sofreu alteração</description>
    <label>Campo Alterado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>