force-app/main/default/objects/AccountHistory__c/fields/ValorAnterior__c.field-meta.xml
<CustomField>
    <fullName>ValorAnterior__c</fullName>
    <description>Valor anterior do campo alterado</description>
    <label>Valor Anterior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>