force-app/main/default/objects/AccountHistory__c/fields/ValorAtual__c.field-meta.xml
<CustomField>
    <fullName>ValorAtual__c</fullName>
    <description>Armazena o valor atual do campo</description>
    <label>Valor Atual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>